--- a/packages/examples/example-app-middleware/package.json
+++ b/packages/examples/example-app-middleware/package.json
@@ -11,12 +11,12 @@
     "test": "node node_modules/mocha/bin/mocha --recursive"
   },
   "engines": {
-    "node": ">=4.3.0",
-    "npm": ">=2.0.0"
+    "node": "6.10.2",
+    "npm": ">=3.10.10"
   },
   "dependencies": {
     "lodash": "4.17.4",
-    "zapier-platform-core": "1.0.11"
+    "zapier-platform-core": "2.0.0"
   },
   "devDependencies": {
     "mocha": "3.2.0",
