--- a/packages/examples/example-app-basic-auth/package.json
+++ b/packages/examples/example-app-basic-auth/package.json
@@ -11,7 +11,7 @@
     "test": "mocha --recursive"
   },
   "engines": {
-    "node": "6.10.3",
+    "node": ">=6.10.3",
     "npm": ">=3.10.10"
   },
   "dependencies": {
