--- a/packages/zapier-platform-core/package.json
+++ b/packages/zapier-platform-core/package.json
@@ -11,16 +11,14 @@
     "preversion": "git pull && npm test",
     "version": "node bin/bump-dependencies.js && git add package.json",
     "postversion": "git push && git push --tags",
-    "test":
-      "node_modules/.bin/eslint src test && node_modules/.bin/mocha -t 5000 --recursive test",
-    "plain-test": "node_modules/.bin/mocha -t 3000 --recursive test",
-    "integration-test":
-      "node_modules/mocha/bin/mocha -t 10000 integration-test",
-    "lint": "node_modules/.bin/eslint src test",
+    "test": "mocha -t 5000 --recursive test",
+    "posttest": "npm run lint",
+    "plain-test": "mocha -t 3000 --recursive test",
+    "integration-test": "mocha -t 10000 integration-test",
+    "lint": "eslint src test",
     "build": "bin/build.sh local.bundle.zip",
     "upload": "bin/upload-lambda.js local.bundle.zip",
-    "deploy":
-      "bin/build.sh local.bundle.zip && bin/upload-lambda.js local.bundle.zip",
+    "deploy": "bin/build.sh local.bundle.zip && bin/upload-lambda.js local.bundle.zip",
     "precommit": "lint-staged"
   },
   "engines": {
@@ -42,7 +40,7 @@
     "babel": "6.23.0",
     "babel-eslint": "7.2.3",
     "eslint": "4.0.0",
-    "husky": "^0.14.3",
+    "husky": "0.14.3",
     "lint-staged": "^7.0.0",
     "mocha": "3.4.2",
     "mock-fs": "4.4.1",
@@ -54,6 +52,9 @@
     "singleQuote": true
   },
   "lint-staged": {
-    "*.{js,json}": ["prettier --write", "git add"]
+    "*.{js,json}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
