--- a/example-apps/oauth1-twitter/package.json
+++ b/example-apps/oauth1-twitter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zapier-platform-example-app-oauth1-twitter",
+  "name": "oauth1-twitter",
   "version": "1.0.0",
   "description": "An OAuth1 example using Twitter.",
   "repository": "zapier/zapier-platform-example-app-oauth1-twitter",
