--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
   "packages": ["packages/*", "packages/examples/*"],
   "npmClient": "yarn",
-  "version": "0.0.0"
+  "version": "independant"
 }
