move commands to yarn

--- a/packages/zapier-platform-legacy-scripting-runner/package.json
+++ b/packages/zapier-platform-legacy-scripting-runner/package.json
@@ -13,10 +13,10 @@
   "scripts": {
     "lint": "node_modules/.bin/eslint .",
     "test": "export CLIENT_ID=1234 CLIENT_SECRET=asdf && node node_modules/mocha/bin/mocha --recursive -t 10000",
-    "posttest": "npm run lint",
+    "posttest": "yarn lint",
     "preversion": "git pull",
     "postversion": "git push && git push --tags",
-    "ci-test": "npm test && ./ci-test.js"
+    "ci-test": "yarn test && ./ci-test.js"
   },
   "engines": {
     "node": ">=8.10.0",
