--- a/packages/zapier-platform-cli/package.json
+++ b/packages/zapier-platform-cli/package.json
@@ -19,12 +19,12 @@
   },
   "scripts": {
     "docs": "ZAPIER_BASE_ENDPOINT='' node src/bin/docs.js",
-    "preversion": "git pull && npm run validate",
-    "version": "npm run docs && npm run gen-completions && git add docs/* goodies/* README.md",
+    "preversion": "git pull && yarn validate",
+    "version": "yarn docs && yarn gen-completions && git add docs/* goodies/* README.md",
     "postversion": "git push && git push --tags",
     "lint-snippets": "eslint snippets --rule 'no-unused-vars: 0' --ignore-pattern snippets/next.js --ignore-pattern 'snippets/dynamic-dropdowns-*'",
     "lint-code": "eslint zapier.js src",
-    "lint": "npm run lint-snippets && npm run lint-code",
+    "lint": "yarn lint-snippets && yarn lint-code",
     "test": "NODE_ENV=test mocha -t 50000 --recursive src/tests",
     "smoke-test": "NODE_ENV=test mocha -t 30000 --recursive src/smoke-tests",
     "zapier": "zapier.js",
@@ -33,7 +33,7 @@
     "gen-completions": "./scripts/gen-zsh-completions.js > ./goodies/zsh/_zapier && ./scripts/gen-bash-completions.js > ./goodies/bash/_zapier",
     "test-convert": "./scripts/test-convert.js",
     "precommit": "lint-staged",
-    "validate": "npm run test && npm run lint"
+    "validate": "yarn test && yarn lint"
   },
   "dependencies": {
     "adm-zip": "0.4.11",
