--- a/packages/zapier-platform-core/package.json
+++ b/packages/zapier-platform-core/package.json
@@ -8,20 +8,16 @@
   "license": "UNLICENSED",
   "main": "index.js",
   "typings": "index.d.ts",
-  "files": [
-    "/include/",
-    "/index.d.ts",
-    "/index.js",
-    "/src/"
-  ],
+  "files": ["/include/", "/index.d.ts", "/index.js", "/src/"],
   "scripts": {
     "preversion": "git pull && npm test",
-    "version": "node bin/bump-dependencies.js && npm install && git add package.json package-lock.json",
+    "version":
+      "node bin/bump-dependencies.js && npm install && git add package.json package-lock.json",
     "postversion": "git push && git push --tags",
     "test": "mocha -t 10000 --recursive test",
     "debug": "mocha -t 10000 --inspect-brk --recursive test",
     "test:w": "mocha -t 10000 --recursive test --watch",
-    "posttest": "npm run lint",
+    "posttest": "yarn lint",
     "plain-test": "mocha -t 5000 --recursive test",
     "integration-test": "mocha -t 10000 integration-test",
     "local-integration-test": "mocha -t 10000 integration-test --local",
@@ -30,7 +26,8 @@
     "lint": "eslint src test",
     "build-integration-test": "bin/build.sh local.bundle.zip",
     "upload-integration-test": "bin/upload-lambda.js local.bundle.zip",
-    "deploy-integration-test": "npm run build-integration-test && npm run upload-integration-test",
+    "deploy-integration-test":
+      "yarn build-integration-test && yarn upload-integration-test",
     "build-boilerplate": "bin/build-boilerplate.sh",
     "precommit": "lint-staged"
   },
@@ -72,9 +69,6 @@
     "singleQuote": true
   },
   "lint-staged": {
-    "*.{js,json}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{js,json}": ["prettier --write", "git add"]
   }
 }
