--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*", "example-apps/*"],
   "npmClient": "yarn",
-  "version": "independant"
+  "version": "independant",
+  "useWorkspaces": true
 }
