--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.14.1"
-  }
+  },
+  "workspaces": [
+    "packages/*",
+    "example-apps/*"
+  ]
 }
