--- a/packages/legacy-scripting-runner/package.json
+++ b/packages/legacy-scripting-runner/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "lint": "node_modules/.bin/eslint .",
-    "test": "export CLIENT_ID=1234 CLIENT_SECRET=asdf && node node_modules/mocha/bin/mocha --recursive -t 10000",
+    "test": "export CLIENT_ID=1234 CLIENT_SECRET=asdf && mocha --recursive -t 10000",
     "posttest": "yarn lint",
     "preversion": "git pull",
     "postversion": "git push && git push --tags",
