--- a/example-apps/babel/package.json
+++ b/example-apps/babel/package.json
@@ -16,7 +16,7 @@
     "test": "mocha --recursive lib/test --require babel-polyfill"
   },
   "engines": {
-    "node": "8.10.0",
+    "node": ">=8.10.0",
     "npm": ">=5.6.0"
   },
   "dependencies": {
