--- a/example-apps/search-or-create/package.json
+++ b/example-apps/search-or-create/package.json
@@ -11,7 +11,7 @@
     "test": "node node_modules/mocha/bin/mocha --recursive"
   },
   "engines": {
-    "node": "8.10.0",
+    "node": ">=8.10.0",
     "npm": ">=5.6.0"
   },
   "dependencies": {
