--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -22,7 +22,7 @@
     "docs": "node bin/docs.js",
     "build": "yarn docs && yarn export",
     "git-add": "git add exported-schema.json README.md docs",
-    "precommit": "yarn build && yarn git-add && lint-staged"
+    "precommit": "yarn build && yarn git-add"
   },
   "dependencies": {
     "jsonschema": "1.1.1",
@@ -31,19 +31,10 @@
   "devDependencies": {
     "eslint": "4.19.1",
     "fs-extra": "7.0.0",
-    "husky": "0.14.3",
     "istanbul": "0.4.5",
-    "lint-staged": "^6.0.0",
     "markdown-toc": "1.2.0",
     "mocha": "5.1.1",
     "node-fetch": "2.2.0",
-    "prettier": "1.9.2",
     "should": "11.1.0"
-  },
-  "prettier": {
-    "singleQuote": true
-  },
-  "lint-staged": {
-    "*.{js,json}": ["prettier --write", "git add"]
   }
 }
