--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,6 +35,10 @@
     "validate": "yarn test && yarn lint"
   },
   "dependencies": {
+    "@oclif/command": "1.5.18",
+    "@oclif/config": "1.13.2",
+    "@oclif/plugin-help": "2.2.0",
+    "@oclif/plugin-not-found": "1.2.2",
     "adm-zip": "0.4.13",
     "archiver": "1.3.0",
     "async": "2.1.5",
@@ -70,9 +74,11 @@
     "zip-stream": "1.1.0"
   },
   "devDependencies": {
+    "@oclif/dev-cli": "1.22.0",
     "decompress": "4.2.0",
     "eslint-plugin-mocha": "^5.3.0",
     "fetch-mock": "5.11.0",
+    "globby": "10.0.1",
     "jayson": "2.0.6",
     "litdoc": "1.5.6",
     "markdown-toc": "1.1.0",
@@ -85,5 +91,11 @@
   },
   "bin": {
     "zapier": "zapier.js"
+  },
+  "oclif": {
+    "commands": "./src/ocommands",
+    "plugins": [
+      "@oclif/plugin-not-found"
+    ]
   }
 }
