bifurcate editor and add base command

--- a/packages/cli/.eslintrc
+++ b/packages/cli/.eslintrc
@@ -4,7 +4,8 @@
   "plugins": ["mocha"],
   "env": {
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "es6": true
   },
   "globals": {
     "Promise": true
