--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
     "fs-extra": "3.0.1",
     "glob": "7.1.1",
     "ignore": "3.3.8",
+    "inquirer": "6.5.0",
     "klaw": "1.3.1",
     "leven": "2.1.0",
     "lodash": "4.17.11",
