fix tests and cleanup

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,6 +10,7 @@
   "files": [
     "/src/*.js",
     "/src/commands/",
+    "/src/oclif/",
     "/src/utils/",
     "/scaffold/",
     "/zapier.js"
