--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "workspaces": ["packages/*", "example-apps/*"],
   "scripts": {
-    "test": "lerna run --stream --scope zapier-platform-cli --scope zapier-platform-core --scope zapier-platform-schema --scope zapier-platform-legacy-scripting-runner test",
-    "smoke-test": "lerna run --stream --scope zapier-platform-cli --scope zapier-platform-core --scope zapier-platform-schema --scope zapier-platform-legacy-scripting-runner smoke-test",
+    "test": "lerna run --scope zapier-platform-cli --scope zapier-platform-core --scope zapier-platform-schema --scope zapier-platform-legacy-scripting-runner test",
+    "smoke-test": "lerna run --scope zapier-platform-cli --scope zapier-platform-core --scope zapier-platform-schema --scope zapier-platform-legacy-scripting-runner smoke-test",
     "bump": "lerna version --exact --force-publish=zapier-platform-cli,zapier-platform-core,zapier-platform-schema",
     "build-boilerplate": "yarn workspace zapier-platform-core build-boilerplate",
     "upload-boilerplate": "yarn workspace zapier-platform-core upload-boilerplate"
