--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -17,7 +17,7 @@
     "test": "mocha -t 10000 --recursive test",
     "smoke-test": "mocha -t 10000 --recursive smoke-test",
     "test:debug": "mocha -t 5-10000 --recursive --inspect-brk test",
-    "lint": "eslint lib",
+    "lint": "eslint lib --fix",
     "coverage": "istanbul cover _mocha -- --recursive",
     "export": "node bin/export.js && prettier --write exported-schema.json",
     "docs": "node bin/docs.js",
