allow refresource strings to have commas

--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     }
   },
   "lint-staged": {
-    "*.{js,json}": [
+    "*.{js}": [
       "eslint --fix",
+      "git add"
+    ],
+    "*.{js,json}": [
       "prettier --write",
       "git add"
     ]
