--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
     "colors": "1.1.2",
     "compress-commons": "1.2.0",
     "core-js": "2.4.1",
+    "debug": "4.1.1",
     "fs-extra": "3.0.1",
     "glob": "7.1.1",
     "ignore": "3.3.8",
