--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,41 +40,30 @@
   },
   "dependencies": {
     "@oclif/command": "1.5.18",
-    "@oclif/config": "1.13.2",
-    "@oclif/plugin-help": "2.2.0",
+    "@oclif/config": "1.13.3",
+    "@oclif/plugin-help": "2.2.1",
     "adm-zip": "0.4.13",
-    "archiver": "1.3.0",
-    "async": "2.1.5",
-    "browserify": "16.2.0",
-    "buffer": "5.0.6",
-    "cli-table3": "0.5.0",
-    "colors": "1.1.2",
-    "compress-commons": "1.2.0",
-    "core-js": "2.4.1",
+    "archiver": "3.1.1",
+    "browserify": "16.5.0",
+    "cli-table3": "0.5.1",
+    "colors": "1.3.3",
     "debug": "4.1.1",
     "fs-extra": "3.0.1",
-    "glob": "7.1.1",
-    "ignore": "3.3.8",
+    "ignore": "5.1.3",
     "inquirer": "6.5.0",
-    "klaw": "1.3.1",
+    "klaw": "3.0.0",
     "leven": "2.1.0",
-    "lodash": "4.17.11",
-    "minimatch": "3.0.3",
+    "lodash": "4.17.15",
     "node-fetch": "1.7.1",
-    "normalize-path": "2.0.1",
-    "ora": "2.1.0",
+    "ora": "3.4.0",
     "parse-gitignore": "0.4.0",
-    "prettier": "1.9.2",
+    "prettier": "1.18.2",
     "read": "1.0.7",
-    "readable-stream": "2.2.2",
-    "semver": "5.5.0",
-    "string-length": "1.0.1",
-    "strip-comments": "0.4.4",
-    "tar-stream": "1.5.2",
-    "through2": "2.0.3",
-    "tmp": "0.0.31",
-    "update-notifier": "2.3.0",
-    "zip-stream": "1.1.0"
+    "semver": "6.3.0",
+    "string-length": "3.1.0",
+    "through2": "3.0.1",
+    "tmp": "0.0.33",
+    "update-notifier": "3.0.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "1.22.2",
