--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -74,6 +74,7 @@
     "markdown-toc": "1.1.0",
     "mock-fs": "4.10.0",
     "ngrok": "2.2.10",
+    "nock": "10.0.6",
     "node-watch": "0.5.4",
     "stdout-stderr": "0.1.9",
     "yamljs": "0.3.0"
