--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "lint": "lerna run --stream --ignore zapier-platform-example-app-* lint",
+    "lint-examples": "eslint examples",
     "validate": "lerna run --ignore zapier-platform-example-app-* validate",
     "bump": "lerna version --exact --force-publish=zapier-platform-cli,zapier-platform-core,zapier-platform-schema",
     "build-boilerplate": "yarn workspace zapier-platform-core build-boilerplate",
