--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,11 +8,15 @@
   "license": "UNLICENSED",
   "main": "index.js",
   "typings": "index.d.ts",
-  "files": ["/include/", "/index.d.ts", "/index.js", "/src/"],
+  "files": [
+    "/include/",
+    "/index.d.ts",
+    "/index.js",
+    "/src/"
+  ],
   "scripts": {
     "preversion": "git pull && yarn test",
-    "version":
-      "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
+    "version": "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
     "postversion": "git push && git push --tags",
     "test": "mocha -t 20000 --recursive test",
     "debug": "mocha -t 10000 --inspect-brk --recursive test",
@@ -25,8 +29,7 @@
     "lint": "eslint src test --fix",
     "build-integration-test": "bin/build.sh local.bundle.zip",
     "upload-integration-test": "bin/upload-lambda.js local.bundle.zip",
-    "deploy-integration-test":
-      "yarn build-integration-test && yarn upload-integration-test",
+    "deploy-integration-test": "yarn build-integration-test && yarn upload-integration-test",
     "build-boilerplate": "bin/build-boilerplate.sh",
     "upload-boilerplate": "bin/upload-boilerplate.sh",
     "postpublish": "bin/build-boilerplate.sh && bin/upload-boilerplate.sh",
@@ -42,7 +45,7 @@
     "content-disposition": "0.5.2",
     "dotenv": "5.0.1",
     "form-data": "2.3.2",
-    "lodash": "4.17.11",
+    "lodash": "4.17.15",
     "node-fetch": "1.7.1",
     "oauth-sign": "0.9.0",
     "semver": "5.6.0",
