deprecate apps command

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -82,6 +82,9 @@
   "oclif": {
     "commands": "src/oclif/commands",
     "bin": "zapier",
-    "plugins": []
+    "plugins": [],
+    "hooks": {
+      "init": "./src/oclif/hooks/deprecated"
+    }
   }
 }
