cleanup & doc fixes

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -84,7 +84,7 @@
     "bin": "zapier",
     "plugins": [],
     "topics": {
-      "env": {"description": "Interact with your app's environment"}
+      "env": {"description": "Interact with your integration's environment"}
     }
   }
 }
