--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
-  - '8.10'
-  - '10'
+  - '10.16.3' # lambda version as of 2019-11-21
 before_install:
   - npm install -g yarn
   - pip install --user awscli
@@ -17,7 +16,7 @@ deploy:
   script: ./scripts/publish.sh
   on:
     tags: true
-    node: '8.10'
+    node: '10.16.3'
   skip_cleanup: true
 env:
   global:
