--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://zapier.com/",
   "author": "Bryan Helmig <bryan@zapier.com>",
   "license": "UNLICENSED",
-  "main": "zapier.js",
+  "main": "./src/bin/run",
   "files": [
     "/src/*.js",
     "/src/commands/",
@@ -19,7 +19,7 @@
     "/oclif.manifest.json"
   ],
   "engines": {
-    "node": ">=8.10.0"
+    "node": ">=10"
   },
   "scripts": {
     "docs": "ZAPIER_BASE_ENDPOINT='' node src/bin/docs.js && cp -r docs ../..",
@@ -43,6 +43,7 @@
     "@oclif/command": "1.5.18",
     "@oclif/config": "1.13.3",
     "@oclif/plugin-help": "2.2.1",
+    "@oclif/plugin-not-found": "1.2.3",
     "adm-zip": "0.4.13",
     "archiver": "3.1.1",
     "browserify": "16.5.0",
@@ -53,7 +54,6 @@
     "ignore": "5.1.3",
     "inquirer": "6.5.0",
     "klaw": "3.0.0",
-    "leven": "2.1.0",
     "lodash": "4.17.15",
     "node-fetch": "2.6.0",
     "ora": "3.4.0",
@@ -82,13 +82,23 @@
   "oclif": {
     "commands": "src/oclif/commands",
     "bin": "zapier",
-    "plugins": [],
+    "plugins": [
+      "@oclif/plugin-not-found"
+    ],
     "hooks": {
-      "init": "./src/oclif/hooks/deprecated"
+      "init": [
+        "./src/oclif/hooks/deprecated",
+        "./src/oclif/hooks/updateNotifier",
+        "./src/oclif/hooks/checkValidNodeVersion"
+      ]
     },
     "topics": {
-      "delete": { "description": "Delete your entire integration or a specific integration version" },
-      "env": {"description": "Interact with your integration's environment"}
+      "delete": {
+        "description": "Delete your entire integration or a specific integration version"
+      },
+      "env": {
+        "description": "Interact with your integration's environment"
+      }
     }
   }
 }
