--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,14 +26,13 @@
     "prepack": "oclif-dev manifest",
     "postpack": "rm -f oclif.manifest.json",
     "precommit": "yarn docs && git add docs README.md ../../docs",
-    "version": "yarn docs && yarn gen-completions && git add docs/* goodies/* README.md",
+    "version": "yarn docs && git add docs/* README.md",
     "postversion": "git push && git push --tags",
     "lint": "eslint src snippets --fix",
     "test": "NODE_ENV=test mocha -t 50000 --recursive src/tests",
     "smoke-test": "NODE_ENV=test mocha -t 120000 --recursive src/smoke-tests",
     "validate-templates": "./scripts/validate-app-templates.js",
     "set-template-versions": "./scripts/set-app-template-versions.js",
-    "gen-completions": "./scripts/gen-zsh-completions.js > ./goodies/zsh/_zapier && ./scripts/gen-bash-completions.js > ./goodies/bash/_zapier",
     "test-convert": "./scripts/test-convert.js",
     "validate": "yarn test && yarn smoke-test && yarn lint"
   },
