--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,7 @@
     "validate": "yarn test && yarn smoke-test && yarn lint"
   },
   "dependencies": {
-    "@oclif/command": "1.5.18",
+    "@oclif/command": "1.5.19",
     "@oclif/config": "1.13.3",
     "@oclif/plugin-help": "2.2.1",
     "@oclif/plugin-not-found": "1.2.3",
@@ -53,6 +53,8 @@
     "inquirer": "6.5.0",
     "klaw": "3.0.0",
     "lodash": "4.17.15",
+    "marked": "0.8.0",
+    "marked-terminal": "3.3.0",
     "node-fetch": "2.6.0",
     "ora": "3.4.0",
     "parse-gitignore": "0.4.0",
@@ -87,15 +89,22 @@
       "init": [
         "./src/oclif/hooks/deprecated",
         "./src/oclif/hooks/updateNotifier",
-        "./src/oclif/hooks/checkValidNodeVersion"
+        "./src/oclif/hooks/checkValidNodeVersion",
+        "./src/oclif/hooks/renderMarkdownHelp"
       ]
     },
     "topics": {
       "delete": {
-        "description": "Delete your entire integration or a specific integration version"
+        "description": "Delete your entire integration or a specific integration version."
       },
       "env": {
-        "description": "Interact with your integration's environment"
+        "description": "Interact with your integration's environment."
+      },
+      "team": {
+        "description": "Add, remove, get team members of your integration."
+      },
+      "users": {
+        "description": "Add, remove, get invited users of your integration."
       }
     }
   }
