--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
     "fs-extra": "8.1.0",
     "ignore": "5.1.3",
     "inquirer": "6.5.0",
+    "jscodeshift": "0.7.0",
     "klaw": "3.0.0",
     "lodash": "4.17.15",
     "marked": "0.7.0",
@@ -68,6 +69,8 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "1.22.2",
+    "@types/jscodeshift": "0.6.3",
+    "jscodeshift-helper": "1.1.0",
     "decompress": "4.2.0",
     "litdoc": "1.5.6",
     "markdown-toc": "1.1.0",
