template updates and polishing

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,3 @@
 # this needs to combine all other eslintignore files so that lint-staged knows what to ignore
 packages/cli/snippets/dynamic-dropdowns-*.js
+packages/cli/scaffold/*.js
