--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "chalk": "2.4.2",
     "eslint": "6.2.2",
     "eslint-config-prettier": "6.1.0",
     "eslint-config-standard": "14.0.1",
@@ -11,10 +12,12 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "husky": "3.0.4",
+    "inquirer": "7.0.3",
     "lerna": "3.16.4",
     "lint-staged": "9.2.4",
     "mocha": "6.2.0",
     "prettier": "1.18.2",
+    "semver": "7.1.1",
     "should": "13.2.3"
   },
   "workspaces": [
@@ -25,7 +28,7 @@
     "lint": "lerna run --stream --ignore zapier-platform-example-app-* lint",
     "lint-examples": "eslint examples",
     "validate": "lerna run --ignore zapier-platform-example-app-* validate",
-    "bump": "lerna version --exact --force-publish=zapier-platform-cli,zapier-platform-core,zapier-platform-schema",
+    "bump": "./scripts/bump.js",
     "build-boilerplate": "yarn workspace zapier-platform-core build-boilerplate",
     "upload-boilerplate": "yarn workspace zapier-platform-core upload-boilerplate"
   },
