--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ before_install:
   - npm install -g yarn
   - pip install --user awscli
 install:
-  # need to ignore engines until we can ditch node 8 after calendar 2019
-  - yarn install --ignore-engines
+  - yarn install
 script:
   - yarn validate
 notifications:
