--- a/packages/legacy-scripting-runner/package.json
+++ b/packages/legacy-scripting-runner/package.json
@@ -24,10 +24,10 @@
   },
   "dependencies": {
     "async": "2.6.1",
-    "cheerio": "1.0.0-rc.2",
     "deasync": "0.1.15",
     "flat": "4.1.0",
-    "jquery-param": "1.0.1",
+    "jquery": "2.1.4",
+    "jsdom": "7.0.0",
     "lodash": "4.17.15",
     "moment-timezone": "0.5.17",
     "request": "2.87.0",
