--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
     "fs-extra": "8.1.0",
     "ignore": "5.1.3",
     "inquirer": "6.5.0",
+    "jscodeshift": "0.7.0",
     "klaw": "3.0.0",
     "lodash": "4.17.15",
     "marked": "0.7.0",
