--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -64,7 +64,9 @@
     "string-length": "3.1.0",
     "through2": "3.0.1",
     "tmp": "0.0.33",
-    "update-notifier": "3.0.1"
+    "update-notifier": "3.0.1",
+    "yeoman-environment": "2.9.6",
+    "yeoman-generator": "4.9.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "1.22.2",
