--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "colors": "1.3.3",
     "debug": "4.1.1",
     "fs-extra": "8.1.0",
+    "gulp-prettier": "3.0.0",
     "ignore": "5.1.3",
     "inquirer": "6.5.0",
     "jscodeshift": "0.7.0",
@@ -58,7 +59,7 @@
     "node-fetch": "2.6.0",
     "ora": "3.4.0",
     "parse-gitignore": "0.4.0",
-    "prettier": "1.18.2",
+    "prettier": "2.0.5",
     "read": "1.0.7",
     "semver": "6.3.0",
     "string-length": "3.1.0",
