--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "colors": "1.3.3",
     "debug": "4.1.1",
     "fs-extra": "8.1.0",
+    "gulp-filter": "6.0.0",
     "gulp-prettier": "3.0.0",
     "ignore": "5.1.3",
     "inquirer": "6.5.0",
