rig up generated templates and test files

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,6 +10,7 @@
   "files": [
     "/src/*.js",
     "/src/commands/",
+    "/src/generators/",
     "/src/oclif/",
     "/src/bin/",
     "/src/bin/run.cmd",
