Test Travis build stages

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,34 @@ before_install:
   - pip install --user awscli
 install:
   - yarn install
-script:
-  - yarn validate
+jobs:
+  include:
+    - stage: "Tests"
+      name: "cli: unit tests"
+      script: "yarn workspace zapier-platform-cli test"
+    - name: "cli: smoke tests"
+      script: "yarn workspace zapier-platform-cli smoke-test"
+    - name: "core: unit tests"
+      script: "yarn workspace zapier-platform-core test"
+    - name: "core: smoke tests"
+      script: "yarn workspace zapier-platform-core smoke-test"
+    - name: "schema: unit tests"
+      script: "yarn workspace zapier-platform-schema test"
+    - name: "schema: smoke tests"
+      script: "yarn workspace zapier-platform-schema smoke-test"
+    - name: "legacy-scripting-runner: integration tests"
+      script: "yarn workspace zapier-platform-legacy-scripting-runner test"
+    - stage: "Deploy"
+      script: skip
+      deploy:
+        provider: script
+        script: ./scripts/publish.sh
+        on:
+          tags: true,
+          node: "10.16.3"
+        skip_cleanup: true
 notifications:
   email: false
-deploy:
-  provider: script
-  script: ./scripts/publish.sh
-  on:
-    tags: true
-    node: '10.16.3'
-  skip_cleanup: true
 env:
   global:
     - PATH: PATH=$HOME/.local/bin:$PATH
