--- a/packages/legacy-scripting-runner/package.json
+++ b/packages/legacy-scripting-runner/package.json
@@ -11,7 +11,7 @@
     "/*.js"
   ],
   "scripts": {
-    "lint": "eslint . --fix",
+    "lint": "eslint .",
     "test": "CLIENT_ID=1234 CLIENT_SECRET=asdf AWS_ACCESS_KEY_ID=fake AWS_SECRET_ACCESS_KEY=fake mocha --recursive -t 20000",
     "preversion": "git pull",
     "postversion": "git push && git push --tags",
