--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ stages:
 jobs:
   include:
     - stage: "Test"
-      name: "cli: unit tests"
+      name: "lint"
+      script: "yarn lint"
+    - name: "cli: unit tests"
       script: "yarn workspace zapier-platform-cli test"
     - name: "cli: smoke tests"
       script: "yarn workspace zapier-platform-cli smoke-test"
