--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "chalk": "^2",
+    "chalk": "^4.0.0",
     "eslint": "^6",
     "eslint-config-prettier": "^6",
     "eslint-config-standard": "^14",
@@ -11,11 +11,11 @@
     "eslint-plugin-node": "^9",
     "eslint-plugin-promise": "^4",
     "eslint-plugin-standard": "^4",
-    "husky": "^3",
+    "husky": "^4.2.5",
     "inquirer": "^7",
     "lerna": "^3",
-    "lint-staged": "^9",
-    "mocha": "^6",
+    "lint-staged": "^10.2.2",
+    "mocha": "^7.1.2",
     "prettier": "^2",
     "semver": "^7",
     "should": "^13"
@@ -36,12 +36,10 @@
   },
   "lint-staged": {
     "*.{js}": [
-      "eslint --fix --quiet",
-      "git add"
+      "eslint --fix --quiet"
     ],
     "*.{js,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "prettier": {
