--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
   - "12"
+cache:
+  - npm: true
+  - yarn: true
+  - pip: true
 before_install:
   - npm install -g yarn
   - pip install --user awscli
