Switch build hook to `_zapier-build`. Update docs and example apps.

--- a/example-apps/babel/package.json
+++ b/example-apps/babel/package.json
@@ -10,10 +10,10 @@
   "scripts": {
     "zapier-build": "rm -rf lib && babel src --out-dir lib",
     "zapier-dev": "rm -rf lib && babel src --out-dir lib --watch",
-    "zapier-push": "npm run zapier-build && zapier push",
     "prepare": "npm run zapier-build",
     "pretest": "npm run zapier-build",
-    "test": "mocha --recursive lib/test --require babel-polyfill"
+    "test": "mocha --recursive lib/test --require babel-polyfill",
+    "_zapier-build": "npm run zapier-build"
   },
   "engines": {
     "node": ">=8.10.0",
