update repo info in package.jsons

--- a/packages/legacy-scripting-runner/package.json
+++ b/packages/legacy-scripting-runner/package.json
@@ -2,8 +2,8 @@
   "name": "zapier-platform-legacy-scripting-runner",
   "version": "3.7.11",
   "description": "Zapier's Legacy Scripting Runner, used by Web Builder apps converted to CLI.",
-  "repository": "zapier/zapier-platform-legacy-scripting-runner",
-  "homepage": "https://zapier.com/",
+  "repository": "zapier/zapier-platform",
+  "homepage": "https://platform.zapier.com/",
   "author": "Zapier Engineering <contact@zapier.com>",
   "license": "SEE LICENSE IN LICENSE",
   "main": "index.js",
