--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,8 +2,8 @@
   "name": "zapier-platform-cli",
   "version": "10.2.0",
   "description": "The CLI for managing integrations in Zapier Developer Platform.",
-  "repository": "zapier/zapier-platform-cli",
-  "homepage": "https://zapier.com/",
+  "repository": "zapier/zapier-platform",
+  "homepage": "https://platform.zapier.com/",
   "author": "Zapier Engineering <contact@zapier.com>",
   "license": "SEE LICENSE IN LICENSE",
   "main": "./src/index.js",
