--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,8 +2,8 @@
   "name": "zapier-platform-core",
   "version": "10.2.0",
   "description": "The core SDK for CLI apps in the Zapier Developer Platform.",
-  "repository": "zapier/zapier-platform-core",
-  "homepage": "https://zapier.com/",
+  "repository": "zapier/zapier-platform",
+  "homepage": "https://platform.zapier.com/",
   "author": "Zapier Engineering <contact@zapier.com>",
   "license": "SEE LICENSE IN LICENSE",
   "main": "index.js",
