--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,6 +30,7 @@
     "version": "yarn docs && git add docs/* README.md",
     "postversion": "git push && git push --tags",
     "lint": "eslint src snippets",
+    "lint:fix": "eslint --fix src snippets",
     "test": "NODE_ENV=test mocha -t 50000 --recursive src/tests",
     "smoke-test": "NODE_ENV=test mocha -t 120000 --recursive src/smoke-tests",
     "validate-templates": "./scripts/validate-app-templates.js",
@@ -37,47 +38,47 @@
     "validate": "yarn test && yarn smoke-test && yarn lint"
   },
   "dependencies": {
-    "@oclif/command": "1.6.1",
-    "@oclif/config": "1.15.1",
-    "@oclif/plugin-autocomplete": "0.2.0",
-    "@oclif/plugin-help": "3.0.0",
+    "@oclif/command": "1.8.0",
+    "@oclif/config": "1.17.0",
+    "@oclif/plugin-autocomplete": "0.3.0",
+    "@oclif/plugin-help": "3.2.2",
     "@oclif/plugin-not-found": "1.2.4",
-    "adm-zip": "0.4.14",
-    "archiver": "4.0.1",
-    "browserify": "16.5.1",
+    "adm-zip": "0.5.4",
+    "archiver": "5.3.0",
+    "browserify": "17.0.0",
     "cli-table3": "0.6.0",
     "colors": "1.4.0",
-    "debug": "4.1.1",
-    "fs-extra": "9.0.0",
+    "debug": "4.3.1",
+    "fs-extra": "9.1.0",
     "gulp-filter": "6.0.0",
     "gulp-prettier": "3.0.0",
-    "ignore": "5.1.4",
-    "inquirer": "7.1.0",
-    "jscodeshift": "0.9.0",
+    "ignore": "5.1.8",
+    "inquirer": "8.0.0",
+    "jscodeshift": "0.11.0",
     "klaw": "3.0.0",
-    "lodash": "4.17.19",
-    "marked": "1.0.0",
-    "marked-terminal": "4.1.0",
+    "lodash": "4.17.21",
+    "marked": "2.0.1",
+    "marked-terminal": "4.1.1",
     "node-fetch": "2.6.1",
-    "ora": "4.0.4",
+    "ora": "5.4.0",
     "parse-gitignore": "0.4.0",
-    "prettier": "2.0.5",
+    "prettier": "2.2.1",
     "read": "1.0.7",
-    "semver": "7.3.2",
-    "string-length": "4.0.1",
-    "through2": "3.0.1",
+    "semver": "7.3.4",
+    "string-length": "4.0.2",
+    "through2": "4.0.2",
     "tmp": "0.2.1",
-    "update-notifier": "4.1.0",
-    "yeoman-environment": "2.10.0",
-    "yeoman-generator": "4.10.1"
+    "update-notifier": "5.1.0",
+    "yeoman-environment": "3.2.0",
+    "yeoman-generator": "5.2.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1",
+    "@oclif/dev-cli": "^1.26.0",
     "decompress": "4.2.1",
     "litdoc": "1.5.6",
     "markdown-toc": "^1",
-    "mock-fs": "^4",
-    "nock": "^12",
+    "mock-fs": "^4.13.0",
+    "nock": "^13.0.11",
     "stdout-stderr": "0.1.13",
     "yamljs": "0.3.0"
   },
