ensure patching tests all run and work

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,10 +18,11 @@
     "preversion": "git pull && yarn test",
     "version": "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
     "postversion": "git push && git push --tags",
-    "test": "mocha -t 20000 --recursive test",
+    "main-tests": "mocha -t 20000 --recursive test",
+    "solo-test": "test $(OPT_OUT_PATCH_TEST_ONLY=yes mocha --recursive test -g 'should be able to opt out of patch' -R json | jq '.stats.passes') -eq 1 && echo 'Ran 1 test and it passed!'",
+    "test": "yarn main-tests && yarn solo-test",
     "debug": "mocha -t 10000 --inspect-brk --recursive test",
     "test:w": "mocha -t 10000 --recursive test --watch",
-    "plain-test": "mocha -t 5000 --recursive test",
     "integration-test": "mocha -t 20000 integration-test",
     "local-integration-test": "mocha -t 10000 integration-test --local",
     "lambda-integration-test": "mocha -t 10000 integration-test --lambda",
