Change test commands in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,16 @@ jobs:
       script: "yarn lint"
       node_js: "14"
     - name: "unit tests - Node 12"
-      script: "yarn workspaces run test"
+      script: "yarn test"
       node_js: "12"
     - name: "unit tests - Node 14"
-      script: "yarn workspaces run test"
+      script: "yarn test"
       node_js: "14"
     - name: "smoke tests - Node 12"
-      script: "yarn workspaces run smoke-test"
+      script: "yarn smoke-test"
       node_js: "12"
     - name: "smoke tests - Node 14"
-      script: "yarn workspaces run smoke-test"
+      script: "yarn smoke-test"
       node_js: "14"
     - stage: "Deploy"
       script: skip
